<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="start_server"
        android:title="@string/download_start_server" />
    <Preference
        android:key="start_download"
        android:title="@string/download_start_download" />
    <Preference
        android:key="get_percent"
        android:title="@string/download_get_percent" />
    <Preference
        android:key="stop_download"
        android:title="@string/download_stop_download" />
    <Preference
        android:key="clear_package"
        android:title="@string/download_clear_package" />
    <Preference
        android:key="get_file"
        android:title="@string/download_get_file" />
    <Preference
        android:key="sync_log"
        android:title="@string/download_sync_log" />
    <Preference
        android:key="del_log"
        android:title="@string/download_del_log" />
    <Preference
        android:key="resp_log"
        android:title="@string/download_resp_log"/>
    <SeekBarPreference
        android:key="download_progress"
        android:defaultValue="0" />
    <Preference
        android:key="download_msg"/>
</PreferenceScreen>